RESOLVED FIXED287027
[iOS] REGRESSION(288610@main): Captions disappear in fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=287027
Summary [iOS] REGRESSION(288610@main): Captions disappear in fullscreen mode
Jer Noble
Reported 2025-02-04 09:37:00 PST
[iOS] REGRESSION(288610@main): Captions disappear in fullscreen mode
Attachments
Jer Noble
Comment 1 2025-02-04 09:37:02 PST
Jer Noble
Comment 2 2025-02-04 09:40:55 PST
EWS
Comment 3 2025-02-04 12:55:04 PST
Committed 289818@main (7c5689faf8d7): <https://commits.webkit.org/289818@main> Reviewed commits have been landed. Closing PR #39994 and removing active labels.
EWS
Comment 4 2025-02-07 13:23:43 PST
Committed 289651.59@safari-7621-branch (25b9956cfe17): <https://commits.webkit.org/289651.59@safari-7621-branch> Reviewed commits have been landed. Closing PR #2532 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.