[iOS] REGRESSION(288610@main): Captions disappear in fullscreen mode https://bugs.webkit.org/show_bug.cgi?id=287027 rdar://144114434

Reviewed by Eric Carlson.

When 288610@main moved ownership of WebAVPlayerLayer out of the model
and into the interface, it ended up confusing which WebAVPlayerLayer
was being referred to by the playerLayer() method. Add a new
fullscreenPlayerLayer() method and refer to it when setting up
fullscreen (including the fullscreen playerLayer's caption layer).

* Source/WebCore/platform/ios/VideoPresentationInterfaceAVKitLegacy.h:
* Source/WebCore/platform/ios/VideoPresentationInterfaceAVKitLegacy.mm:
(WebCore::VideoPresentationInterfaceAVKitLegacy::setupFullscreen):
(WebCore::VideoPresentationInterfaceAVKitLegacy::fullscreenPlayerLayer const):

Canonical link: https://commits.webkit.org/289818@main