Source/WebCore/platform/ios/VideoPresentationInterfaceAVKitLegacy.h
@@ -70,6 +70,8 @@ public:
 private:
     WEBCORE_EXPORT VideoPresentationInterfaceAVKitLegacy(PlaybackSessionInterfaceIOS&);
 
+    WebAVPlayerLayer *fullscreenPlayerLayer() const;
+
     void updateRouteSharingPolicy() final;
     void setupPlayerViewController() final;
     void invalidatePlayerViewController() final;
